--- a/docker-puller.service
+++ b/docker-puller.service
@@ -6,6 +6,7 @@ After=multi-user.target
 ExecStart=/home/david/docker-puller server -p 8080
 Type=simple
 Restart=on-failure
+User=david
 #Environment="SECRET=some_secret"
 
 [Install]
