--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,6 +59,11 @@ jobs:
           # it needs to be cross compiled
           targets: ${{ matrix.cross-target }}
       - name: Build executable
+        if: matrix.cross-target == ''
+        run: |
+          runner_name=${{ matrix.name }}
+          cargo build --release
+      - name: Build executable
         run: |
           runner_name=${{ matrix.name }}
           cross_target=${{ matrix.cross-target }}
