--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,9 +26,12 @@ jobs:
     strategy:
       matrix:
         include:
-          - { name: ubuntu-22.04,    os: ubuntu-22.04,   archive: tar.gz, cross-target: '' }
-          - { name: macos-universal, os: macos-latest,   archive: zip,    cross-target: x86_64-apple-darwin }
-          - { name: windows,         os: windows-latest, archive: zip,    cross-target: '' }
+          - { name: ubuntu-22.04,          os: ubuntu-22.04,   archive: tar.gz, cross-target: '' }
+          - { name: macos-universal,       os: macos-latest,   archive: zip,    cross-target: x86_64-apple-darwin }
+          - { name: windows,               os: windows-latest, archive: zip,    cross-target: '' }
+          - { name: ubuntu-22.04-arm64,    os: ubuntu-22.04,   archive: tar.gz, cross-target: aarch64-unknown-linux-gnu }
+          - { name: macos-universal-arm64, os: macos-latest,   archive: zip,    cross-target: aarch64-apple-darwin }
+          - { name: windows-arm64,         os: windows-latest, archive: zip,    cross-target: aarch64-pc-windows-mscc }
     name: Build binaries
     runs-on: ${{ matrix.os }}
     steps:
